# performer

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTORS  CTestConfig.cmake  Messages.sh  README.md  metainfo.yaml  performer.desktop  performer.rc  x-performer-setlist.xml
cmake/: AndroidManifest.xml  AndroidManifest.xml.in  NSIS.template.in
doc/: commands.html  credits.html  faq.html  index.docbook  index.html  introduction.html  using-performer.html
mockup/: mainWindow.ui  plugin.ui  untitled.ui
po/: de.po
po/docs/de/: index.docbook
po/docs/en/: index.docbook
src/: CMakeLists.txt  Performerui.rc  abstractdocumentviewer.h  abstractpatchbackend.hpp  androidfiledialog.cpp  androidfiledialog.h  carlapatchbackend.cpp  carlapatchbackend.h  devicesconfig.cpp  devicesconfig.h  fallback.cpp  fallback.h  main.cpp  midi.cpp  midi.h  okulardocumentviewer.cpp  okulardocumentviewer.h  okularui.rc  performer.cpp  performer.h  performer.notifyrc  qtwebviewdocumentviewer.cpp  qtwebviewdocumentviewer.h  qwebenginedocumentviewer.cpp  qwebenginedocumentviewer.h  setlist.ui  setlistmetadata.cpp  setlistmetadata.h  setlistmodel.cpp  setlistmodel.h  setlistview.cpp  setlistview.h  tests.cpp  util.cpp  util.h
src/backend/: .performer-carla.py.kate-swp  performer-carla  performer-carla-database  performer-carla-database.py  performer-carla.py
src/qml/: TooltipArea.qml  behavior.qml  main.qml  webview.qml
src/tests/: CMakeLists.txt
src/ui/: setlist.ui  setlist.ui.autosave  setlist_without_kde.ui
